# gen3_lite_examples

./: CMakeLists.txt  README.md  package.xml  ros_kortex_setup.sh  ros_kortex_setup2.sh
gen3_lite_move_it_config/: CMakeLists.txt  package.xml
launch/: gen3_khu_gazebo.launch  gen3_khu_moveit.launch  gen3_lite_gazebo.launch  moveit_example.launch  moveit_example_cpp.launch  p_n_p.launch  p_n_p2.launch  p_n_p2_cpp.launch  p_n_p_cpp.launch
src/move_it/: khu_moveit_sample.cpp  p_n_p.cpp  p_n_p.py  p_n_p2.cpp  p_n_p2.py  simple_moveit_example.cpp  simple_moveit_example.py
